--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyB_O_MOsbttHQ9gAXE1iO7gCa1Vgg-6AYo&libraries=places,visualization&language=en&region=EN" async defer></script>
 </head>
 <body>
   <app-root></app-root>
